# mapgen

./: .gitignore  CHANGELOG.md  README.md  RESTRUCTURE.md  TODO.md  pyproject.toml
examples/: 3d_visualization.py  __init__.py  basic_example.py  compare_maps.py  complete_workflow_example.py  full_generation.py  generate.py  save_load_example.py
experiments/: plot_accumulation.py  plot_hydrology.py  plot_lakes.py
src/mapgen/: __init__.py  export.py  flora.py  generators.py  hydrology.py  level.py  map.py  map_data.py  map_generator.py  rivers.py  roads.py  settlements.py  terrain.py  tile_collections.py  utils.py  visualization.py  water_routes.py
tests/: __init__.py  test_map_generator.py
web/: README.md  __init__.py  app.py
